<resources>
    <string name="app_name">FireBaseProject</string>
    <string name="btnCrearUsuario">NUEVO USUARIO</string>
    <string name="btnConsultarUsuario">Consultar Usuarios</string>
    <string name="btnModificarUsuario">Modificar Usuario</string>
    <string name="tituloUser">NUEVO USUARIO</string>
    <string name="editUserName">Nombre Usuario</string>
    <string name="editMail">Correo Electrónico</string>
    <string name="editName">Nombre</string>
    <string name="editApe">Apellidos</string>
    <string name="editDir">Dirección</string>
    <string name="btnAddUser">Agregar Usuario</string>
    <string name="nodo_user">Usuarios</string>
    <string name="btnListUser">Mostrar Usuarios</string>
    <string name="updateTitle">Actualizar Usuario</string>
    <string name="editSearch">Introduce nombre de Usuario</string>
    <string name="btnUpdate">Actualizar</string>
    <string name="btnDelete">Eliminar Usuario</string>
    <string name="imageFirebase">Firebase Logo</string>
    <string name="editPass">Password</string>
    <string name="btnLogin">LOGIN</string>
    <string name="TitleLogin">LOGIN USUARIO</string>
    <string name="mailLogin">E-mail</string>
    <string name="loginPass">Password</string>
    <string name="btnUserLogin">Entrar a QuickTrade</string>
    <string name="btnLoginNew">Nuevo Usuario</string>
    <string name="btnAddIn">Agregar Producto</string>
    <string name="btnListIn">Ver Mis Productos</string>
    <string name="imageUserIn">Phone Image</string>
    <string name="addTitle">Agregar Nuevo Producto</string>
    <string name="addName">Nombre Producto</string>
    <string name="addDesc">Descripción</string>
    <string name="addCate">Categoría</string>
    <string name="addPrecio">Precio</string>
    <string name="btnAddItem">Agregar Producto</string>
    <string name="textCat">Categoría</string>
    <string name="salirAdd">Logout</string>
    <string name="addUserItem">Agregar Producto</string>
    <string name="verElementos">Ver Productos</string>
    <string name="gestElementos">Gestión Productos</string>
    <string name="btnProducto">ARTICULOS</string>
    <string name="nomProducto">Nombre Producto</string>
    <string name="descProducto">Descripción</string>
    <string name="catProducto">Categoría</string>
    <string name="precioProducto">Precio</string>
    <string name="fechaProducto">Fecha</string>
    <string name="imageItem">Imagen Item</string>
    <string name="startLogin">Inicio</string>
    <string name="actionInicio">Inicio</string>
    <string name="actionUser">Nuevo Usuario</string>
    <string name="actionLogin">Login</string>
    <string name="actionLogout">Logout</string>
    <string name="btnGestion">Gestion Productos</string>
    <string name="nomGProducto">Producto</string>
    <string name="descGProducto">Descripción</string>
    <string name="catGProducto">Categoría</string>
    <string name="precioGProducto">Precio</string>
    <string name="imageUpdate">Update Item</string>
    <string name="imageDelete">Delete Item</string>
    <string name="titleUpdate">PRODUCTO</string>
    <string name="updateNombre">Nombre</string>
    <string name="updateDesc">Descripción</string>
    <string name="updateCat">Categoría</string>
    <string name="updatePrecio">Precio</string>
    <string name="btnUpdateProducto">Actualizar</string>
    <string name="btnUpdateSalir">Salir</string>
    <string name="imagenCarrito">Carrito</string>
    <string name="imagePlus128">Plus128</string>
    <string name="actionListar">Ver Usuarios</string>
    <string name="actionMod">Modificar Usuario</string>
    <string name="addImageText">Añadir Imagen</string>
    <string name="imageAddItem">Imagen Artículo</string>
    <string name="addFoto">Hacer Foto</string>
    <string name="imageTakePic">Hacer Foto</string>
    <string name="imagenProducto">Imagen del Producto</string>
    <string name="btnAddFriend">AÑADIR AMIGO</string>
    <string name="btnAddAmigo">AGREGAR</string>
    <string name="usuarios">USUARIOS</string>

    <string-array name="spinnerItems">
        <item>Tecnología</item>
        <item>Coches</item>
        <item>Hogar</item>
    </string-array>
</resources>
