<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearUpdate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue2"
    android:orientation="vertical"
    tools:context="com.josevicente.firebaseproject.UserControl.UpdateActivity">

    <TextView
        android:id="@+id/updateTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:text="@string/updateTitle"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/actionModeWebSearchDrawable" />

        <EditText
            android:id="@+id/editSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editSearch" />
    </TableRow>

    <EditText
        android:id="@+id/updateUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editUserName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/updateMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editMail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/updatePNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/updateApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editApe"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/updateDir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editDir"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btnUpdate"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/btnDelete"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>
