<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue2"
    tools:context="com.josevicente.firebaseproject.UserControl.UserActivity">

        <LinearLayout
            android:id="@+id/linearUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/tituloUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:gravity="center"
                    android:text="@string/tituloUser"
                    android:textColor="@android:color/background_dark"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editUserName"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editMail"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editPassID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editPass"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editName"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editApe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editApe"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/editDir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/editDir"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/btnAddUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/btnAddUser"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnConsultarUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/btnConsultarUsuario"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnModificarUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/btnModificarUsuario"
                    android:textColor="?android:attr/textColorLink"
                    android:textSize="18sp"
                    android:textStyle="bold" />

        </LinearLayout>

</ScrollView>
