<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollAdd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nube1"
    tools:context="com.josevicente.firebaseproject.ItemControl.AddItemActivity">

    <LinearLayout
        android:id="@+id/linearAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/addTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addTitle"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/addDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addDesc"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/textCat"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@id/spinnerItems" />

        <EditText
            android:id="@+id/addPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addPrecio"
            android:inputType="number" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="189dp">

            <TextView
                android:id="@+id/addImageText"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/addImageText"
                android:layout_marginStart="5dp"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imageAddItem"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/addImageText"
                android:layout_gravity="start"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/imageAddItem"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/addnew64" />

            <TextView
                android:id="@+id/addFoto"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/imageTakePic"
                android:gravity="center"
                android:layout_marginEnd="5dp"
                android:text="@string/addFoto"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/imageTakePic"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/imageAddItem"
                android:layout_marginEnd="5dp"
                android:adjustViewBounds="true"
                android:background="@android:drawable/screen_background_light_transparent"
                android:contentDescription="@string/imageTakePic"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/camara1x50" />

        </RelativeLayout>



        <Button
            android:id="@+id/btnAddItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btnAddItem"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
