<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearUpdate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/carddUpdateID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <RelativeLayout
            android:id="@+id/relativeUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:gravity="center"
                android:text="@string/titleUpdate"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/updatePNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleUpdate"
                android:ems="10"
                android:hint="@string/updateNombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/updateDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/updatePNombre"
                android:ems="10"
                android:hint="@string/updateDesc"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/updateCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/updateDesc"
                android:ems="10"
                android:hint="@string/updateCat"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/updatePrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/updateCat"
                android:ems="10"
                android:hint="@string/updatePrecio"
                android:inputType="number" />

            <Button
                android:id="@+id/btnUpdateProducto"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/updatePrecio"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnUpdateProducto" />

            <Button
                android:id="@+id/btnUpdateSalir"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/btnUpdateProducto"
                android:layout_below="@+id/btnUpdateProducto"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnUpdateSalir" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>