<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background=" #f8c471 "
    tools:context="com.josevicente.firebaseproject.LoginUser.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textTitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:gravity="center"
            android:text="@string/TitleLogin"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mailLogin"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/loginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/loginPass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnUserLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btnUserLogin"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imagenCarrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/imagenCarrito"
            app:srcCompat="@drawable/carrito64" />

    </LinearLayout>

</ScrollView>
